# ORB_SLAM

./: .gitignore  README.md
BagWithFeaturesFromImages/config/: cervino_config.yaml  kitti_config.yaml  kitti_raw_config.yaml
BagWithFeaturesFromImages/scripts/: BagFromImages.py  BagWithFreaturesFromImages.py
g2o/: CMakeLists.txt
orb_slam/: CMakeLists.txt  README.txt  package.xml
orb_slam/Data/: Settings.yaml  Settings_Morse.yaml  Settings_Morse_Kinect.yaml  Settings_Morse_Videocam.yaml  Settings_bluefox_2mm.yaml  Settings_bluefox_2mm_stephan.yaml  Settings_bluefox_6mm.yaml  Settings_bluefox_6mm_fuji.yaml  Settings_gopro.yaml  Settings_gopro_640.yaml  Settings_gopro_800x600.yaml  Settings_hq30_320_240.yaml  Settings_kitti.yaml  Settings_kitti_raw.yaml  Settings_logitech_hd_320_240.yaml  Settings_logitech_hd_640_480.yaml  go_pro.rviz  gopro.rviz
orb_slam/cfg/: debug_console.conf
orb_slam/include/: Frame.h  FramePublisher.h  Initializer.h  KeyFrame.h  KeyFrameDatabase.h  LocalMapping.h  LoopClosing.h  Map.h  MapPoint.h  MapPublisher.h  ORBVocabulary.h  ORBextractor.h  ORBmatcher.h  OctoMapPublisher.h  Optimizer.h  PnPsolver.h  Sim3Solver.h  StatePublisher.h  Tracking.h
orb_slam/launch/: ExampleKinetic.launch  go_pro.launch  go_pro_640.launch  go_pro_800x600.launch  kitti.launch  kitti_raw.launch  orb_slam.launch  orb_slam_debug_visualisation.launch  orb_slam_morse.launch  orb_slam_solo.launch  orb_slam_solo_bluefox_2mm.launch  orb_slam_solo_bluefox_2mm_stephan.launch  orb_slam_solo_bluefox_6mm.launch  orb_slam_solo_hq30_320_240.launch  orb_slam_solo_logitech_320_240.launch  orb_slam_solo_logitech_640_480.launch
orb_slam/msg/: ORBState.msg
orb_slam/src/: Frame.cc  FramePublisher.cc  Initializer.cc  KeyFrame.cc  KeyFrameDatabase.cc  LocalMapping.cc  LoopClosing.cc  Map.cc  MapPoint.cc  MapPublisher.cc  ORBextractor.cc  ORBmatcher.cc  OctoMapPublisher.cc  Optimizer.cc  PnPsolver.cc  Sim3Solver.cc  StatePublisher.cc  Tracking.cc  main.cc
